Fixed all navbar bugs on mobile and desktop

--- a/_navbar.sass
+++ b/_navbar.sass
@@ -103,8 +103,7 @@ navbar::before
             right: 0px
             height: 52vh
             top: 8vh
-            margin-top: 16px
-            margin-right: 20px
+            margin-top: 20px
             +border-radius($radius-20)
 
             display: flex
@@ -124,6 +123,7 @@ navbar::before
             transition: all 0.24s ease
 
         .active-nav
+            margin-right: 20px
             transform: translateX(0%)
 
 // Animations and Transforms
@@ -134,14 +134,6 @@ navbar::before
     to
         opacity: 1
         transform: translateX(0px)
-
-@keyframes bodyFilterFade
-    from
-        filter: blur(20px)
-        transition: transform 0.2s ease-in-out
-    to
-        filter: blur(0px)
-        transition: transform 0.2s ease-in-out
   
 .toggle div.line-one
     transform: rotate(-45deg) translate(-5px, 3.36px)
