--- a/styles.css
+++ b/styles.css
@@ -170,8 +170,7 @@ nav .burger div {
     right: 0px;
     height: 52vh;
     top: 8vh;
-    margin-top: 16px;
-    margin-right: 20px;
+    margin-top: 20px;
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
     border-radius: 20px;
@@ -191,6 +190,7 @@ nav .burger div {
     transition: all 0.24s ease;
   }
   nav .active-nav {
+    margin-right: 20px;
     transform: translateX(0%);
   }
 }
@@ -202,16 +202,6 @@ nav .burger div {
   to {
     opacity: 1;
     transform: translateX(0px);
-  }
-}
-@keyframes bodyFilterFade {
-  from {
-    filter: blur(20px);
-    transition: transform 0.2s ease-in-out;
-  }
-  to {
-    filter: blur(0px);
-    transition: transform 0.2s ease-in-out;
   }
 }
 .toggle div.line-one {
